Fix text truncation of buttons

--- a/apps/client/src/app/pages/admin/admin-page.scss
+++ b/apps/client/src/app/pages/admin/admin-page.scss
@@ -16,6 +16,18 @@
       }
     }
   }
+
+  .mat-flat-button {
+    ::ng-deep {
+      .mat-button-wrapper {
+        display: block;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        width: 100%;
+      }
+    }
+  }
 }
 
 :host-context(.is-dark-theme) {
